--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ember-resolver": "^12.0.1",
     "ember-source": "~6.0.0",
     "ember-template-lint": "^6.0.0",
+    "ember-truth-helpers": "^4.0.3",
     "ember-welcome-page": "^7.0.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
